--- a/styles/index.scss
+++ b/styles/index.scss
@@ -19,7 +19,13 @@
 
 @layer components {
   .doc {
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
+
+    @media (min-width: 640px) {
+      flex-direction: row;
+    }
 
     @media (min-width: 768px) {
       height: 1056px;
@@ -28,5 +34,13 @@
 
   .doc-side {
     flex: 0 0 250px;
+  }
+
+  @media print {
+    .doc {
+      display: flex;
+      flex-direction: row;
+      height: 100%;
+    }
   }
 }
