add position calculator draft

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,18 @@
 @layer base {
   @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 
+  /* Chrome, Safari, Edge, Opera */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
+
   body {
     @apply font-sans font-normal;
   }
