--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,19 @@
 
   :root {
     --color-secondary-txt: rgba(251, 252, 254, 0.85);
+
+    /* --color-test1: 217.55 84.46% 62.16% / 0.24;
+    --color-test5: 324.53 55.92% 51.96% / 0.24; */
+
+    --color-light-purple: 231.33 41.67% 57.65%;
+    --color-light-blue: 199.03 85.32% 57.25%;
+    --color-violet: 217.55 84.46% 62.16%;
+    --color-green: 148.35 55.46% 55.1%;
+    --color-pink: 324.53 55.92% 51.96%;
+
+    --color-nav-bg: rgba(136, 164, 230, 0.08);
+    --color-nav-border: #aef2ef;
+    --color-loading: rgb(56, 103, 214);
   }
 
   time {
@@ -76,5 +89,11 @@
     .doc-side {
       @apply h-screen;
     }
+  }
+}
+
+@layer utilities {
+  .glass {
+    @apply bg-clip-padding backdrop-filter backdrop-blur-md;
   }
 }
